plugins {
    id("com.github.johnrengelman.shadow") version "8.1.1"
    id("io.micronaut.application") version "4.2.1"
    id("io.micronaut.aot") version "4.2.1"
}

group 'com.senderman'
version '1.0'

repositories {
    mavenCentral()
}

dependencies {
    implementation('com.annimon:tgbots-module:6.5.1') {
        exclude group: 'org.glassfish.grizzly', module: 'grizzly-http-server'
        exclude group: 'org.glassfish.jersey.core', module: 'jersey-server'
    }

    implementation("jakarta.annotation:jakarta.annotation-api")

    annotationProcessor("io.micronaut:micronaut-http-validation")
    implementation("io.micronaut:micronaut-http-client")
    implementation("io.micronaut:micronaut-jackson-databind")

    annotationProcessor("io.micronaut.micrometer:micronaut-micrometer-annotation")
    implementation("io.micronaut:micronaut-management")
    implementation("io.micronaut.micrometer:micronaut-micrometer-core")
    implementation("io.micronaut.micrometer:micronaut-micrometer-registry-prometheus")

    annotationProcessor("io.micronaut.data:micronaut-data-document-processor")
    implementation("io.micronaut.data:micronaut-data-mongodb")
    implementation("org.mongodb:mongodb-driver-sync:4.11.0")
    runtimeOnly('com.github.jnr:jnr-unixsocket:0.38.17')

    runtimeOnly("ch.qos.logback:logback-classic:1.4.14")

}

application {
    mainClass.set("com.senderman.lastkatkabot.LastkatkaBot")
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

graalvmNative.toolchainDetection = false
micronaut {
    runtime 'netty'
    processing {
        incremental(true)
        annotations("com.senderman.lastkatkabot.*")
    }
    aot {
        // Please review carefully the optimizations enabled below
        // Check https://micronaut-projects.github.io/micronaut-aot/latest/guide/ for more details
        optimizeServiceLoading = true
        convertYamlToJava = true
        precomputeOperations = true
        cacheEnvironment = true
        optimizeClassLoading = true
        deduceEnvironment = false
        optimizeNetty = true

    }
}